--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -54,8 +54,8 @@
 					</svg>
 				</a>
 				<% if controller_name != 'feeds' %>
-					<h1 class="absolute bottom-1 font-light left-8 text-left text-xxs w-full">
-						Eventos e cinema em Porto Alegre
+					<h1 class="absolute bottom-1 font-light left-0 text-left text-xxs w-full">
+						Eventos e tudo+ em Porto Alegre
 					</h1>
 				<% end %>
 			<% end %>
