--- a/web/app/views/feeds/_horizontal_filter_categories.html.erb
+++ b/web/app/views/feeds/_horizontal_filter_categories.html.erb
@@ -18,11 +18,25 @@
 			<div class="w-80 md:w-128">
 				<div class="sticky left-0 c-h2 w-content">Principais categorias</div>
 				<div class="grid grid-cols-3 gap-3 mt-3 text-sm md:text-base">
-					<% @categories.select { |cat| ['show', 'party', 'theatrical_show', 'street_fair', 'return_trip'].include?(cat.details_name) }.sort_by { |cat| cat.details_display_name }.each do |category| %>
+					<% @categories_group&.each do |cg| %>
+						<%= link_to categories_group_events_path(categories_group: cg.url),
+												class: class_names('group relative w-full rounded-lg border p-3 break-words',
+																					 { 'text-brand-600 bg-brand-100 border-brand-300':                                 cg.url == params[:categories_group],
+																						 'text-gray-700 hover:text-brand-600 hover:bg-brand-100 hover:border-brand-300': cg.url != params[:categories_group] }) do %>
+							<div class="space-y-1">
+								<div class="text-lg"><%= cg.emoji %></div>
+								<div><%= cg.display_name %></div>
+							</div>
+							<div class="flex absolute top-2 right-2 justify-center items-center w-6 h-6 bg-gray-100 rounded-full group-hover:text-brand-600 group-hover:bg-brand-200 text-xxs">
+								<%= cg.active_events_count %>
+							</div>
+						<% end %>
+					<% end %>
+					<% @categories.select { |cat| ['show', 'party', 'theatrical_show'].include?(cat.details_name) }.sort_by { |cat| cat.details_display_name }.each do |category| %>
 
 						<%= link_to category_events_path(category: category.details_url),
 												data:  { 'slider-target': 'item' },
-												class: class_names('group relative w-full rounded-lg border p-3',
+												class: class_names('group relative w-full rounded-lg border p-3 break-words',
 																					 { 'text-brand-600 bg-brand-100 border-brand-300':                                 @category == category,
 																						 'text-gray-700 hover:text-brand-600 hover:bg-brand-100 hover:border-brand-300': @category != category }) do %>
 							<div class="space-y-1">
@@ -35,13 +49,18 @@
 						<% end %>
 					<% end %>
 					<%= link_to cinemas_path,
-											class: class_names('w-full rounded-lg border p-3 text-gray-700 hover:text-brand-600 hover:bg-brand-100 hover:border-brand-300',
+											class: class_names('group relative w-full rounded-lg border p-3 break-words',
 																				 { 'text-brand-600 bg-brand-100 border-brand-300':                                 current_page?("/porto-alegre/cinemas"),
-																					 'text-gray-700': current_page?("/porto-alegre/cinemas") }) do %>
+																					 'text-gray-700 hover:text-brand-600 hover:bg-brand-100 hover:border-brand-300': !current_page?("/porto-alegre/cinemas") }) do %>
 						<div class="space-y-1">
 							<div class="text-lg">🎥🎬</div>
 							<div>Cinemas</div>
 						</div>
+						<% if @movies.present? %>
+							<div class="flex absolute top-2 right-2 justify-center items-center w-6 h-6 bg-gray-100 rounded-full group-hover:text-brand-600 group-hover:bg-brand-200 text-xxs">
+								<%= @movies&.size %>
+							</div>
+						<% end %>
 					<% end %>
 				</div>
 			</div>
