--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -58,17 +58,17 @@
 				</div>
 			</div>
 		<% end %>
-		<% unless params[:day] || params[:category] || params[:theme] %>
+		<% unless params[:day] || params[:category] || params[:categories_group] || params[:theme] %>
 			<% cache "#{current_user&.cache_key_with_version}/#{current_user&.liked_or_disliked_event_ids&.size}/hero--swipable" do %>
 				<%= render Hero::SwipableComponent.new(user: current_user) %>
 			<% end %>
 		<% end %>
-		<% unless params[:theme] || params[:category] %>
+		<% unless params[:theme] || params[:category] || params[:categories_group] %>
 			<% cache @upcoming_events&.cache_version do %>
 				<%= render partial: 'feeds/horizontal_filter_categories', categories: @categories %>
 			<% end %>
 		<% end %>
-		<% unless params[:category] || params[:theme] %>
+		<% if @movies.present? && controller_name == 'feeds' && action_name == 'index' && params[:category].blank? && params[:categories_group].blank? && params[:theme].blank? %>
 			<% cache [@movies&.cache_version, current_user] do %>
 				<%= render partial: 'movies/movies', locals: { movies:         @movies,
 																											 selected_movie: @movie,
@@ -78,21 +78,22 @@
 																											 hovercard:      true,
 																											 template:       'default',
 																											 target:         '_top',
-																											 id:             'movies-index' } if @movies.present? && controller_name == 'feeds' && action_name == 'index' && params[:category].blank? %>
+																											 id:             'movies-index' } %>
 			<% end %>
 		<% end %>
 
 		<turbo-frame id="main-sidebar--feed" target="_top" class="inline-block px-5 w-full md:px-0">
 			<% if @upcoming_events.present? %>
 				<div>
-					<% if current_page? "/porto-alegre/eventos/categoria/#{params[:category]}" %>
+					<% if current_page?("/porto-alegre/eventos/categoria/#{params[:category]}") || current_page?("/porto-alegre/eventos/categoria/grupo/#{params[:categories_group]}") %>
 						<% content_for :back_button, true %>
 						<% content_for :top_app_bar_title, @category&.details_display_name %>
 						<div class="-mx-5 md:mx-0 mb-10">
 							<%= render partial: 'feeds/horizontal_filter_categories', categories: @categories %>
 						</div>
 						<h1 class="mb-3 c-h2">
-							<span class="text-brand-600"><%= @category&.details_display_name %></span> em Porto Alegre
+							<span class="text-brand-600"><%= params[:categories_group]&.present? ? params[:categories_group]&.titleize : @category&.details_display_name %></span>
+							em Porto Alegre
 						</h1>
 					<% elsif current_page? "/porto-alegre/eventos/tema/#{params[:theme]}" %>
 						<% content_for :back_button, true %>
