--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -6,10 +6,10 @@
 
 	<% if !current_user || (current_user && controller_name == 'feeds') %>
 		<div class="py-20">
-			<h3 class="font-semibold mb-6 md:max-w-screen-lg mx-auto md:text-left text-xl">Categorias</h3>
+			<h3 class="mx-auto mb-6 text-xl font-semibold md:max-w-screen-lg md:text-left">Categorias</h3>
 			<div class="gap-y-1.5 gap-x-4 md:gap-x-2 md:gap-y-3 grid grid-cols-2 md:grid-cols-3 md:max-w-screen-lg mx-auto text-left">
 				<% Category.active.each do |category| %>
-					<a href="<%= category_events_path category.details_url %>" class="text-xs hover:text-brand-600 cursor-pointer">
+					<a href="<%= category_events_path category.details_url %>" class="text-xs cursor-pointer hover:text-brand-600">
 						<%= category.details_display_name %> <span class="hidden md:inline-block">em Porto Alegre</span>
 					</a>
 				<% end %>
@@ -20,10 +20,10 @@
 	<div class="font-semibold text-brand-600">
 		oi@alegreme.com
 	</div>
-	<div class="flex-wrap inline-flex items-center justify-center">
+	<div class="inline-flex flex-wrap justify-center items-center">
 		Eventos e cinema em Porto Alegre
 	</div>
-	<div class="flex-wrap items-center justify-center">
+	<div class="flex-wrap justify-center items-center">
 		<span>
 			Feito
 			<!-- <a href="https://www.instagram.com/jonataseduardo/">@jonataseduardo</a> -->
@@ -40,15 +40,28 @@
 	<!-- <div class="me-footer__vamodale">
 		Ei! Tem ideias de funcionalidades, projetos pra tocar junto, quer conectar uma API, trocar uma ideia... Usa os links acima.
 	</div> -->
-	<div class="">
-		<a class="md:hover:text-brand-500 transition-colors duration-150" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="nofollow noreferrer" target="_blank">
-			Sobre ·
+	<div class="flex flex-wrap justify-center items-center space-x-2">
+		<a class="flex items-center space-x-2 transition-colors duration-150 md:hover:text-brand-600" href="https://www.instagram.com/portoalegreme/" rel="nofollow noreferrer" target="_blank">
+			<svg class="w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+				<path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162S8.597 18.163 12 18.163s6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zM12 16c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+			</svg>
+			<span>Instagram</span>
 		</a>
-		<a rel="nofollow" class="md:hover:text-brand-600 transition-colors duration-150" href="/privacy">Política de
-			privacidade</a> ·
-		<a rel="nofollow" class="md:hover:text-brand-600 transition-colors duration-150" href="/terms">Termos de serviço</a>
-		·
-		<a href="/content" class="md:hover:text-brand-600 transition-colors duration-150" rel="nofollow">Política de
-			propriedade intelectual</a>
+		<span>·</span>
+		<a class="transition-colors duration-150 md:hover:text-brand-600" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="nofollow noreferrer" target="_blank">
+			Sobre
+		</a>
+		<span>·</span>
+		<a rel="nofollow" class="transition-colors duration-150 md:hover:text-brand-600" href="/privacy">Política de
+			privacidade
+		</a>
+		<span>·</span>
+		<a rel="nofollow" class="transition-colors duration-150 md:hover:text-brand-600" href="/terms">
+			Termos de serviço
+		</a>
+		<span>·</span>
+		<a href="/content" class="transition-colors duration-150 md:hover:text-brand-600" rel="nofollow">Política de
+			propriedade intelectual
+		</a>
 	</div>
 </section>
