Add adsense verifier tag

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 	<meta name="theme-color" content="#ffffff"/>
 	<meta name="viewport"
 				content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
+	<script data-ad-client="ca-pub-8286231373119724" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 	<%= render partial: 'layouts/meta-tags', cached: -> { [controller_name, action_name] } %>
 	<%= render partial: 'layouts/google_analytics' %>
