--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
 	<%= javascript_pack_tag 'application', 'data-turbo-track': 'reload', defer: true %>
 
 </head>
-<body class="overflow-x-hidden antialiased text-gray-600 bg-white font-display md:bg-white" data-user-type="<%= current_user ? "logged-user" : "guest-user" %>" data-controller="<%= controller_name %>" data-action="<%= action_name %>">
+<body class="text-gray-600 bg-white font-display md:bg-white" data-user-type="<%= current_user ? "logged-user" : "guest-user" %>" data-controller="<%= controller_name %>" data-action="<%= action_name %>">
 
 <!-- Google Tag Manager (noscript) -->
 <noscript>
