--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -151,7 +151,7 @@
 					 data-share-button-title="<%= @event.name %>"
 					 data-share-button-url="<%= event_url(@event, format: :html) %>"
 					 data-action="click->share-button#share">
-				<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
+				<input class="absolute opacity-0 hidden" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
 				<svg class="mr-3 w-4 transition-colors fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 308 308">
 					<defs/>
 					<path d="M227.904 176.981c-.6-.288-23.054-11.345-27.044-12.781-1.629-.585-3.374-1.156-5.23-1.156-3.032 0-5.579 1.511-7.563 4.479-2.243 3.334-9.033 11.271-11.131 13.642-.274.313-.648.687-.872.687-.201 0-3.676-1.431-4.728-1.888-24.087-10.463-42.37-35.624-44.877-39.867-.358-.61-.373-.887-.376-.887.088-.323.898-1.135 1.316-1.554 1.223-1.21 2.548-2.805 3.83-4.348.607-.731 1.215-1.463 1.812-2.153 1.86-2.164 2.688-3.844 3.648-5.79l.503-1.011c2.344-4.657.342-8.587-.305-9.856-.531-1.062-10.012-23.944-11.02-26.348-2.424-5.801-5.627-8.502-10.078-8.502-.413 0 0 0-1.732.073-2.109.089-13.594 1.601-18.672 4.802C90 87.918 80.89 98.74 80.89 117.772c0 17.129 10.87 33.302 15.537 39.453.116.155.329.47.638.922 17.873 26.102 40.154 45.446 62.741 54.469 21.745 8.686 32.042 9.69 37.896 9.69h.001c2.46 0 4.429-.193 6.166-.364l1.102-.105c7.512-.666 24.02-9.22 27.775-19.655 2.958-8.219 3.738-17.199 1.77-20.458-1.348-2.216-3.671-3.331-6.612-4.743z"/>
@@ -215,7 +215,7 @@
 <!--				 data-share-button-title="<%#= @event.name %>"-->
 <!--				 data-share-button-url="<%#= event_url(@event, format: :html) %>"-->
 <!--				 data-action="click->share-button#share">-->
-<!--			<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%#= event_url(@event, format: :html) %>">-->
+<!--			<input class="absolute opacity-0 hidden" style="bottom: -30px" data-share-button-target="input" type="text" value="<%#= event_url(@event, format: :html) %>">-->
 <!--			<div>Compartilhar</div>-->
 <!--			<svg class="h-4 fill-current" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">-->
 <!--				<path d="M15 14.08C14.24 14.08 13.56 14.38 13.04 14.85L5.91 10.7C5.96 10.47 6 10.24 6 10C6 9.76 5.96 9.53 5.91 9.3L12.96 5.19C13.5 5.69 14.21 6 15 6C16.66 6 18 4.66 18 3C18 1.34 16.66 0 15 0C13.34 0 12 1.34 12 3C12 3.24 12.04 3.47 12.09 3.7L5.04 7.81C4.5 7.31 3.79 7 3 7C1.34 7 0 8.34 0 10C0 11.66 1.34 13 3 13C3.79 13 4.5 12.69 5.04 12.19L12.16 16.35C12.11 16.56 12.08 16.78 12.08 17C12.08 18.61 13.39 19.92 15 19.92C16.61 19.92 17.92 18.61 17.92 17C17.92 15.39 16.61 14.08 15 14.08Z"/>-->
