Add block of ads in feed and event sidebar

--- a/web/app/views/events/_group_by_day_list.html.erb
+++ b/web/app/views/events/_group_by_day_list.html.erb
@@ -52,4 +52,14 @@
 			<% end %>
 		</div>
 	</div>
+
+	<ins class="adsbygoogle"
+			 style="display:block"
+			 data-ad-format="fluid"
+			 data-ad-layout-key="-hy-h+1m-7x+ey"
+			 data-ad-client="ca-pub-8286231373119724"
+			 data-ad-slot="9671554506"></ins>
+	<script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
 </div>
