--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -129,6 +129,20 @@
 		<%= render(LargeEventComponent.new(event: @event, user: current_user)) %>
 	</div>
 	<div class="mt-5 md:col-span-3 md:mb-0 md:mt-28">
+		<div class="hidden relative p-3 md:block">
+			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8286231373119724"
+							crossorigin="anonymous"></script>
+			<!-- ad events#show sidebar -->
+			<ins class="adsbygoogle"
+					 style="display:block"
+					 data-ad-client="ca-pub-8286231373119724"
+					 data-ad-slot="4750400318"
+					 data-ad-format="auto"
+					 data-full-width-responsive="true"></ins>
+			<script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+		</div>
 		<div class="flex hidden relative bottom-auto items-center p-3 space-y-2 w-auto text-sm text-gray-600 rounded-xl cursor-pointer md:block">
 			<a href="<%= @event.source_url %>" target="_blank" rel="nofollow noreferrer" class="c-chip--active">
 				<svg class="mr-3 h-5 transition-colors stroke-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -200,6 +214,24 @@
 				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
 			</svg>
 		<% end %>
+
+		<div class="border-t m-5 relative md:hidden">
+			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8286231373119724"
+							crossorigin="anonymous"></script>
+			<!-- ad events#show main -->
+
+			<div class="relative">
+				<ins class="adsbygoogle"
+						 style="display:block"
+						 data-ad-client="ca-pub-8286231373119724"
+						 data-ad-slot="9265904980"
+						 data-ad-format="auto"
+						 data-full-width-responsive="true"></ins>
+			</div>
+			<script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+		</div>
 	</div>
 
 <!--	<div class="flex fixed bottom-0 py-3 px-3 space-x-2 w-screen text-sm font-medium text-gray-500 bg-white border-t cursor-pointer select-none md:hidden ">-->
