--- a/web/app/views/movies/_movie.html.erb
+++ b/web/app/views/movies/_movie.html.erb
@@ -65,11 +65,11 @@
 		<% end %>
 		<div class="grid grid-cols-12 grid-flow-col gap-0 px-5 mt-10 max-w-screen-lg md:px-0 md:mt-20 md:gap-10">
 			<div class="overflow-hidden col-span-12 mx-auto w-full rounded-lg border md:border-0 md:col-span-9 md:space-y-12">
-				<% movie.screenings&.active&.sort_by { |s| s.cinema&.display_name }&.group_by { |s| [s.cinema&.display_name, s.cinema&.google_id] }.each_with_index do |cinema_name_group, index| %>
-					<% if cinema_name_group[1].any? { |s| s.day.to_date >= Date.current } && (params[:cinema].blank? ? true : cinema_name_group[1][0]&.cinema&.slug == params[:cinema]) %>
+				<% movie.screening_groups&.includes(:screenings)&.active&.sort_by { |sg| sg.cinema&.display_name }&.group_by { |sg| [sg.cinema&.display_name, sg.cinema&.google_id] }.each_with_index do |cinema_name_group, index| %>
+					<% if cinema_name_group[1].any? { |sg| sg.date.to_date >= Date.current } && (params[:cinema].blank? ? true : cinema_name_group[1][0]&.cinema&.slug == params[:cinema]) %>
 						<div data-controller="accordion" data-accordion-mobile-only-value="true" data-accordion-body-class="bg-white" data-accordion-title-class="font-semibold" class="p-4 border-b md:border-0 md:p-0 last:border-b-0">
-							<div data-action="click->accordion#toggle" data-accordion-open-value="false" class="grid grid-cols-4 gap-3">
-								<div class="col-span-3 text-sm md:inline-block md:mb-3 md:pr-5">
+							<div data-action="click->accordion#toggle" data-accordion-open-value="false" class="flex justify-between">
+								<div class="text-sm md:inline-block md:mb-3 md:pr-5">
 									<div class="inline select-none md:mb-3">
 										<%= link_to cinema_path(cinema_name_group[1][0]&.cinema), class: 'hidden md:inline-block' do %>
 											<h2 id="<%= cinema_name_group[1][0]&.cinema&.slug %>" class="inline text-base font-medium text-gray-800 md:text-xl md:font-bold">
@@ -118,34 +118,7 @@
 							</div>
 							<div class="-mx-5 scrollx md:mx-0">
 								<div data-accordion-target="hidden" class="grid hidden grid-flow-col gap-2 px-5 md:px-0 md:grid-flow-row md:w-auto md:grid md:grid-cols-3 w-content">
-									<% cinema_name_group[1].filter { |screening| screening.day.to_date >= Date.current }.sort_by { |screening| screening.day.to_date }.group_by { |screening| screening.day }.each do |screening_day_group| %>
-										<div class="p-3 bg-white rounded border">
-											<h3 class="inline c-h4">
-												<%= day_of_week(screening_day_group[0]).titleize %>
-											</h3>
-											<span class="text-xs text-gray-800"><%= screening_day_group[0].strftime('%d/%m/%y') %></span>
-											<div class="float-right -mt-1 -mr-2 w-content">
-												<%= render(LikesButtonComponent.new(likeable: screening_day_group[1][0], user: current_user)) if screening_day_group[1][0] %>
-											</div>
-											<div class="mt-3 space-y-1">
-												<% screening_day_group[1].filter { |s| s.times&.any? }.each do |screening| %>
-													<div class="">
-														<div class="text-xs">
-															<%= screening.language %>
-															<span class="text-gray-500 text-xxs"><%= screening.screen_type %></span>
-														</div>
-														<div class="flex flex-wrap mt-1">
-															<% screening.times&.each do |time| %>
-																<div class="py-1 px-2 mr-1 mb-1 text-xs text-gray-800 bg-gray-100 rounded-full w-content">
-																	<%= time %>
-																</div>
-															<% end %>
-														</div>
-													</div>
-												<% end %>
-											</div>
-										</div>
-									<% end %>
+									<%= render partial: 'movies/screening_group', locals: { user: current_user }, collection: cinema_name_group[1].filter { |sg| sg.date.to_date >= Date.current }.sort_by { |sg| sg.date.to_date }, as: :screening_group %>
 								</div>
 							</div>
 							<div data-accordion-target="hidden" class="hidden mt-3 w-full h-8 md:inline-block">
@@ -158,7 +131,7 @@
 						</div>
 					<% end %>
 				<% end %>
-				<% if movie.screenings.filter { |screening| screening&.day&.to_date >= Date.current }&.empty? %>
+				<% if movie.screening_groups.filter { |sg| sg&.date&.to_date >= Date.current }&.empty? %>
 					<div class="p-5 text-sm leading-relaxed text-gray-800 rounded-md bg-brand-100">
 						Sem exibições cadastradas na plataforma para este filme. Veja
 						nos <%= link_to 'sites oficiais', cinemas_path, class: 'text-brand-600 font-medium' %> dos cinemas caso
